Finished Some Processes

--- a/templates/operations/vetting/list.html
+++ b/templates/operations/vetting/list.html
@@ -25,7 +25,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="body">
+                        <div class="body table-responsive">
                             <table class="table table-bordered table-striped table-hover dataTable js-exportable">
                                 <thead>
                                     <tr>
