--- a/templates/operations/other-ops.html
+++ b/templates/operations/other-ops.html
@@ -17,10 +17,12 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-right">
-                                        <a href="/admin/operations/otheroperationadd" 
-                                            class="btn btn-sm bg-cyan waves-effect">
-                                            Add Other Operation
-                                        </a>
+                                        {% if perms.operations.add_otheroperation %}
+                                            <a href="/admin/operations/otheroperation/add" 
+                                                class="btn btn-sm bg-cyan waves-effect">
+                                                Add Other Operation
+                                            </a>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
