--- a/templates/operations/tickets.html
+++ b/templates/operations/tickets.html
@@ -17,10 +17,12 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-right">
-                                        <a href="/admin/operations/ticket/add" 
-                                            class="btn btn-sm bg-cyan waves-effect">
-                                            Add Ticket
-                                        </a>
+                                        {% if perms.operations.add_ticket %}
+                                            <a href="/admin/operations/ticket/add" 
+                                                class="btn btn-sm bg-cyan waves-effect">
+                                                Add Ticket
+                                            </a>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
